# Edgion

./: .cursorrules  .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.runtime  GUIDELINES.md  LICENSE  MTLS_TLS_LAYER_IMPLEMENTATION.md  Makefile  README.md  UDP_TEST_GUIDE.md  build-image.sh  build.rs  rustfmt.toml  test_udp_client.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
config/: edgion-controller-k8s.toml  edgion-controller.toml  edgion-gateway.toml
docker/: Dockerfile  Dockerfile.builder  Dockerfile.runtime
docs/: DIRECTORY.md  README.md  lb-policy-usage.md  resource-architecture-overview.md  star.md  todolist  todolist.md
edgion/: Cargo.toml  build.rs
edgion/config/: edgion-op.toml
edgion/config/crd/: edgion_gateway_config_crd.yaml
edgion/config/examples/: _public-gateway_GatewayClass.yaml  public__gateway_class.yaml  public__http_route1.yaml  public__http_route_ccc.yaml  readme.md  test1_public-route1_HTTPRoute.yaml  test1_public_route1_HTTPRoute.yaml  test2_public-route2_HTTPRoute.yaml  test3_public-route3_HTTPRoute.yaml  test4_public-route4_HTTPRoute.yaml
edgion/docs/: no-hidden-logic.md  todolist
edgion/examples/: test_load_base.rs
edgion/src/: lib.rs
edgion/src/core/: mod.rs
edgion/src/core/access_log/: entry.rs  mod.rs
edgion/src/core/backend/: mod.rs  weighted_selector.rs
edgion/src/core/backends/: mod.rs
edgion/src/core/backends/endpoint_slice/: conf_handler_impl.rs  discovery_impl.rs  ep_slice_store.rs  mod.rs
edgion/src/core/backends/services/: conf_handler_impl.rs  service_store.rs
edgion/src/core/cli/: admin.rs  common.rs  gateway.rs  gateway_with_operator.rs  mod.rs  operator.rs  runtime.rs
edgion/src/core/cli/config/: mod.rs
edgion/src/core/cli/edgion_gw/: log_config.rs  mod.rs
edgion/src/core/cli/edgion_op/: mod.rs
edgion/src/core/conf_load/: etcd.rs  file_system.rs  mod.rs  traits.rs
edgion/src/core/conf_load/file_system_loader/: loader.rs  loader_impl.rs  loader_trait.rs  mod.rs  types.rs
edgion/src/core/conf_sync/: base_onf.rs  cache_diff.rs  config_center.rs  config_center_rcv_changes.rs  config_client.rs  config_hub.rs  config_server.rs  config_server_event_dispatch.rs  config_server_update.rs  config_tests.rs  gateway_base_conf.rs  grpc_client.rs  grpc_server.rs  grpc_tests.rs  mod.rs  proto.rs  traits.rs  types.rs  watcher_cache.rs  watcher_mgr.rs
edgion/src/core/conf_sync/cache_client/: cache.rs  cache_data.rs  event_dispatch.rs  grpc_impl.rs  grpc_syncable.rs  mod.rs  traits.rs
edgion/src/core/conf_sync/cache_server/: cache.rs  impls.rs  mod.rs  store.rs  traits.rs
edgion/src/core/conf_sync/center_cache/: cache.rs  impls.rs  mod.rs  store.rs  traits.rs  types.rs
edgion/src/core/conf_sync/client_cache/: cache.rs
edgion/src/core/conf_sync/conf_client/: config_client.rs  grpc_client.rs
edgion/src/core/conf_sync/conf_server/: config_server.rs  event_dispatch.rs  grpc_server.rs
edgion/src/core/conf_sync/config_loader/: etcd.rs  file_system.rs  mod.rs
edgion/src/core/conf_sync/hub_cache/: cache.rs  mod.rs
edgion/src/core/conf_sync/proto/: config_sync.proto
edgion/src/core/conf_sync/server_cache/: impls.rs  store.rs  traits.rs
edgion/src/core/conf_sync/tests/: config_test.rs  grpc_test.rs  mod.rs
edgion/src/core/conf_sync/watcher_cache/: cache.rs  impls.rs  mod.rs  store.rs  traits.rs  types.rs
edgion/src/core/external_sys/: readme
edgion/src/core/gateway/: backend.rs  edgion_http.rs  edgion_http_context.rs  edgion_http_pingora.rs  err_resp.rs  gateway_base.rs  mod.rs  server_header.rs
edgion/src/core/host_match/: mod.rs  radix_host.rs  radix_host_match.rs
edgion/src/core/host_match/hash_match/: hash_host.rs  mod.rs
edgion/src/core/host_match/radix_match/: mod.rs  radix_host.rs  radix_host_match.rs
edgion/src/core/lb/: backend_selector.rs  mod.rs  weighted_selector.rs
edgion/src/core/lb/lb_policy/: config.rs  mod.rs  policy_store.rs
edgion/src/core/lb/leastconn/: counter.rs  mod.rs  selection.rs
edgion/src/core/lb/optional_lb/: config.rs  mod.rs  policy_store.rs  types.rs
edgion/src/core/lb/simple_lb/: mod.rs  weighted_selector.rs
edgion/src/core/logging/: layer.rs  mod.rs  writer.rs
edgion/src/core/misc/: log_sink.rs  metrics.rs  mod.rs
edgion/src/core/model/: mod.rs
edgion/src/core/model/edgion_gw/: mod.rs
edgion/src/core/model/edgion_op/: admin.rs  mod.rs
edgion/src/core/routes/: conf_handler_impl.rs  lb_policy_sync.rs  match_impl.rs  match_unit.rs  mod.rs  regex_match_unit.rs  routes_mgr.rs  runtime.rs  tests.rs
edgion/src/core/routes/match/: mod.rs  radix_path.rs  radix_route_match.rs  route_runtime.rs
edgion/src/core/routes/match_engine/: mod.rs  radix_path.rs  radix_route_match.rs  regex_routes_engine.rs  route_runtime.rs
edgion/src/core/routes/matchers/: mod.rs  radix.rs  radix_path.rs  route_runtime.rs
edgion/src/core/services/: conf_handler_impl.rs  conf_handler_impl_ep_slice.rs  conf_handler_impl_service.rs  mod.rs  service_mgr.rs
edgion/src/core/tls/: mod.rs  tls_cert_matcher.rs  tls_pingora.rs
edgion/src/core/utils/: mod.rs  net.rs
edgion/src/tests/: config_sync_test.rs
edgion/src/types/: ctx.rs  edgion_gateway_config.rs  edgion_status.rs  edgion_tls.rs  err.rs  err_code.rs  gateway_api_types.rs  gateway_base_conf.rs  global_def.rs  mod.rs  resource_kind.rs  resource_meta_traits.rs  versionable.rs
edgion/src/types/resources/: edgion_gateway_config.rs  edgion_tls.rs  gateway.rs  gateway_class.rs  http_route.rs  mod.rs
edgion/tests/: config_sync_client.rs  config_sync_server.rs
examples/: QUICK_START.md  README.md  WEBSOCKET_TEST_RESULTS.md  resource_diff.rs  test_grpc_client.rs  test_grpc_server.rs  test_server.rs  test_udp_server.py  test_websocket_client.rs  test_websocket_server.rs  test_ws_connection.sh
radix_route_matcher/: Cargo.toml  build.rs
radix_route_matcher/src/: c_api.rs  ffi.rs  lib.rs  radix_tree.rs  tests.rs
scripts/: build-image.sh
skills/: SKILL.md  add-new-resource-guide.md  ci-cd-and-build.md  documentation-writing.md  (+7 more)
(+2855 files in other folders)
