[workspace]
resolver = "2"
members = [
    "edgion",
    "test-server",
    "radix_route_matcher",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["pandalaa"]

# Shared dependencies for the workspace
[workspace.dependencies]
# Core async runtime and error handling
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
anyhow = "1.0"
async-trait = "0.1"
thiserror = "1.0.69"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Kubernetes conf_client and types
kube = { version = "2.0.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.26.0", features = ["latest", "schemars"] }
schemars = { version = "1" }

# gRPC (config sync)
tonic = "0.12"
tonic-reflection = "0.12"
prost = "0.13"
tonic-build = "0.12"

# File system monitoring
notify = "6.1"

# Utilities
bytes = "1.0"
base64 = "0.22"
chrono = "0.4"
once_cell = "1.21.3"
parking_lot = "0.12"
uuid = { version = "1.0", features = ["v4"] }
arc-swap = "1.7"
dashmap = "5.5"
regex = "1.0"
rand = "0.8"

# Pingora
pingora-core = { version = "0.6", features = ["openssl_derived", "boringssl"] }
pingora-http = { version = "0.6" }
pingora-load-balancing = { version = "0.6" }
pingora-proxy = { version = "0.6", features = ["openssl_derived", "boringssl"] }

# CLI
clap = { version = "4.0", features = ["derive"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Test conf_server
axum = { version = "0.8.4", features = ["macros"] }
futures = { version = "0.3.31" }

# Route matching
radix_route_matcher = { path = "radix_route_matcher" }

# Workspace packages
edgion = { path = "edgion" }