[package]
name = "edgion"
version.workspace = true
edition.workspace = true

[lib]
name = "edgion"
path = "src/lib.rs"

[[bin]]
name = "edgion-gw"
path = "src/bin/edgion_gw.rs"

[[bin]]
name = "edgion-op"
path = "src/bin/edgion_op.rs"

[features]
# Legacy route tests using deprecated ZtraceHttpRoute (disabled by default)
legacy_route_tests = []

# Default feature
default = []

[dependencies]
# Core async runtime and error handling
tokio.workspace = true
tokio-stream.workspace = true
anyhow.workspace = true
async-trait.workspace = true
thiserror.workspace = true

# Serialization/Deserialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true

# Kubernetes conf_client and types
kube.workspace = true
k8s-openapi.workspace = true
schemars.workspace = true

# gRPC (config sync)
tonic.workspace = true
tonic-reflection.workspace = true
prost.workspace = true

# File system monitoring
notify.workspace = true
futures.workspace = true

# HTTP conf_server
axum.workspace = true

# Route matching
radix_route_matcher.workspace = true

# Utilities
bytes.workspace = true
base64.workspace = true
chrono.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
uuid.workspace = true
arc-swap.workspace = true
dashmap.workspace = true
regex.workspace = true
rand.workspace = true

# Pingora
pingora-core = { version = "0.6", features = ["openssl_derived", "boringssl"] }
pingora-http = "0.6"
pingora-load-balancing = "0.6"
pingora-proxy = { version = "0.6", features = ["openssl_derived", "boringssl"] }
etcd-client = "0.11"

# CLI
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

[build-dependencies]
tonic-build.workspace = true
